Corrected project section alignment

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -197,32 +197,46 @@ margin-right: 1%;
 .ceremony {
   display: flex;
   justify-content: center;
+  /* flex-wrap: wrap; */
+  /* flex-direction: column; */
   align-items: center;
-  
+  text-align: center;
 }
 
 .ceremonyImg {
   /* display: flex; */
   /* flex-wrap: wrap; */
-  justify-content: center;
-  max-width: 25%;
+  /* justify-content: center; */
+  max-width: 35%;
   /* margin-left: 15%; */
 }
 
 .podcastImg {
   display: flex;
   flex-wrap: wrap;
+  flex-shrink: inherit;
   /* justify-content: center; */
-  max-width: 110%;
-  margin-left: 15%;
-  margin-top: 4%;
+  max-width: 500%;
+  margin-right: 250%;
+  /* margin-left: 15%;
+  margin-top: 4%; */
 }
 
-
+.podcastText {
+  display: flex;
+  flex-wrap: wrap;
+justify-content: center;
+  color: white;
+  max-width: 40%;
+  margin-left: 40%;
+}
 
 .ceremonyText {
   color: white;
-  align-items: center;
+  /* text-align: center; */
+  /* align-items: center; */
+  margin-left: -20%;
+  margin-right: 20%;
 /* justify-content: center; */
 }
 
@@ -266,6 +280,9 @@ margin-bottom: 1%;
 @media (max-width: 908px) {
   .navbar-logo {
     display: none;
+  }
+  .podcastImg {
+    max-width: 200%;
   }
 }
 
